# qa_architecture

./: .editorconfig  .env.example  .gitattributes  .gitignore  .tool-versions  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.chaos.yml  docker-compose.observability.yml  docker-compose.yml  entities.json  mempalace.yaml  task.txt
.github/workflows/: ai-automation.yml  ci.yml  codeql.yml  release.yml
docs/: architecture.md  demo-checklist.md  full-project-documentation-ru.md  release-flow.md  test-strategy.md  unified-project-guide-ru.docx  unified-project-guide-ru.md
docs/ai-artifacts/: README.md  prompts.md  reasoning.md  test-plan.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/tests/e2e/: exam-flow.spec.ts
gateway/: traefik.yml
gateway/dynamic/: blue-green.yml  middlewares.yml
infrastructure/scripts/: bluegreen-apply.sh  run-contract.sh  run-format.sh  run-lint.sh  run-llm-eval.sh  run-tests.sh  seed-data.sh  smoke.sh  wait-for-healthy.sh
services/ai-assistant/: Dockerfile  pyproject.toml
services/ai-assistant/app/: main.py
services/geography/: Dockerfile  pom.xml
services/history/: pyproject.toml
services/history/alembic/: env.py
services/history/app/: config.py  db.py  feature_flags.py  health.py  main.py  telemetry.py
services/math/: Dockerfile  go.mod  main.go  main_test.go
services/physics/: Dockerfile  entrypoint.sh  pyproject.toml
services/physics/alembic/versions/: 0001_initial.py
services/physics/app/: config.py  main.py
services/physics/app/api/: routes.py
services/physics/app/domain/: repository.py  seed.py  service.py
services/physics/tests/: conftest.py
services/physics/tests/integration/: test_api.py
services/physics/tests/unit/: test_service.py
tools/scripts/: gen-proto.sh  gen-types-frontend.sh  md_to_docx.py
(+21 files in other folders)
